--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     
 </head>
 <body>
-    <center style="margin-top:100px">Made with love ❤️ by <i style="font-family: cursive">Vishal Ambre</i></center>
+    <center style="margin-top:100px">Made with ❤️ by <i style="font-family: cursive">Vishal Ambre</i></center>
 </body>
 </html>
