--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     
 </head>
 <body>
-    <center style="margin-top:100px">Made with ❤️ by <i style="font-family: 'Sacramento', cursive;">Vishal Ambre</i></center>
+    <center style="margin-top:100px">Made with ❤️ by <i style="font-family: 'Sacramento';">Vishal Ambre</i></center>
 </body>
 </html>
