--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     
 </head>
 <body>
-    <center style="margin-top:100px">Made with ❤️ by <i style="font-family: 'Caveat';">Vishal Ambre</i></center>
+<strong><h2><center style="margin-top:100px">Made with ❤️ by <i style="font-family: 'Caveat';">Vishal Ambre</i>
+    <br><br> Contact No: 8097401570 
+    <br> <br> Email me at: <a href="mailto:ambrevishal03@gmail.com">ambrevishal03@gmail.com</a> 
+    <br><br><a href="https://github.com/vishalambre"> Link to complete GitHub Repository</a>
+    <br><br>Some of the hosted web applications can be found here
+    <br><br><a href="https://vishalambre.github.io/Budget-Application/">Budget application</a>&nbsp;&nbsp;&nbsp;
+    <a href="https://vishalambre.github.io/Grammar-learning-application/">Grammar learning application</a>
+
+    <br><br>This Page is still under construction please bear with me 
+
+</center></h2></strong> 
+
 </body>
 </html>
