--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <br><br>Some of the hosted web applications can be found here
     <br><br><a href="https://vishalambre.github.io/Budget-Application/">Budget application</a>&nbsp;&nbsp;&nbsp;
     <a href="https://vishalambre.github.io/Grammar-learning-application/">Grammar learning application</a>
-
+    <br><br><a href="Resume.pdf" target="_blank">Résumé</a>
     <br><br>This Page is still under construction please bear with me 
 
 </center></h2></strong> 
