--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="vendor/css/ionicons.min.css"> -->
+    <script src="https://unpkg.com/ionicons@4.2.4/dist/ionicons.js"></script>
+    <link rel="stylesheet" href="vendor/css/grid.css">
+    <link rel="stylesheet" href="resources/css/style.css">
     <title>Vishal Ambre|Almost an Engineer</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
-    <script src="https://unpkg.com/ionicons@4.2.0/dist/ionicons.js"></script>
-   
-    
 </head>
 <body>
-<strong><h2><center style="margin-top:100px">Made with ❤️ by <i style="font-family: 'Caveat';">Vishal Ambre</i>
-    <br><br> Contact No: 8097401570 
-    <br> <br> Email me at: <a href="mailto:ambrevishal03@gmail.com">ambrevishal03@gmail.com</a> 
-    <br><br><a href="https://github.com/vishalambre"> Link to complete GitHub Repository</a>
-    <br><br>Some of the hosted web applications can be found here
-    <br><br><a href="https://vishalambre.github.io/Budget-Application/">Budget application</a>&nbsp;&nbsp;&nbsp;
-    <a href="https://vishalambre.github.io/Grammar-learning-application/">Grammar learning application</a>
-    <br><br><a href="Resume.pdf" target="_blank">Résumé</a>
-    <br><br>This Page is still under construction please bear with me 
+    <header>
+        <div class="main-textbox">
+            <h1>Vishal Ambre</h1>
+            <p>Fresh Outta College!</p>
+        </div>
 
-</center></h2></strong> 
+        <div class = "links">
+            <ul>
+               <!-- <a href=""> <li class="item">Git</li> </a>
+               <a href=""> <li class="item">Resume</li> -->
 
+                <li class="item github"><a href="https://github.com/vishalambre" target="_blank"><ion-icon class="icon" name="logo-github"></ion-icon></a></li>
+                <li class="item resume"><a href="Resume.pdf" target="_blank"><ion-icon name="document"></ion-icon></a></li>
+            </ul>
+        </div>
+    </header>
+
+    
 </body>
 </html>
