removed unnecessart stuff

--- a/index.html
+++ b/index.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400"
+      rel="stylesheet"
+    />
     <!-- <link rel="stylesheet" href="vendor/css/ionicons.min.css"> -->
     <script src="https://unpkg.com/ionicons@4.2.4/dist/ionicons.js"></script>
-    <link rel="stylesheet" href="vendor/css/grid.css">
-    <link rel="stylesheet" href="resources/css/style.css">
+    <link rel="stylesheet" href="vendor/css/grid.css" />
+    <link rel="stylesheet" href="resources/css/style.css" />
     <title>Vishal Ambre|Almost an Engineer</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="main-textbox">
-            <h1>Vishal Ambre</h1>
-            <p>Fresh Outta College!</p>
-        </div>
+      <div class="main-textbox">
+        <h1>Vishal Ambre</h1>
+        <p>Fresh Outta College!</p>
+      </div>
 
-        <div class = "links">
-            <ul>
-               <!-- <a href=""> <li class="item">Git</li> </a>
+      <div class="links">
+        <ul>
+          <!-- <a href=""> <li class="item">Git</li> </a>
                <a href=""> <li class="item">Resume</li> -->
 
-                <li class="item github"><a href="https://github.com/vishalambre" target="_blank"><ion-icon class="icon" name="logo-github"></ion-icon></a></li>
-                <li class="item resume"><a href="Resume.pdf" target="_blank"><ion-icon name="document"></ion-icon></a></li>
-            </ul>
-        </div>
+          <li class="item github">
+            <a href="https://github.com/vishalambre" target="_blank"
+              ><ion-icon class="icon" name="logo-github"></ion-icon
+            ></a>
+          </li>
+          <!-- <li class="item resume"><a href="Resume.pdf" target="_blank"><ion-icon name="document"></ion-icon></a></li> -->
+        </ul>
+      </div>
     </header>
-
-    
-</body>
+  </body>
 </html>
